2012-04-16  Narasimhma Sharoff  <nsharoff@us.ibm.com>

	* brokerOs.c, brokerUpc.c, native.h:
	[ 3517530 ] Implement mark, release routines in CMPIBrokerMemFT

2012-04-13  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* Makefile.am, cimRequest.c, httpAdapter.c, httpComm.c, providerDrv.c, 
	  providerMgr.c, sfcBroker.c, sfcb.cfg.pre.in, trace.c, trace.h:
	[ 3501314 ] Add dynamic logging and syslog output to sfcb trace
	(based on patch by Mike Lisanke)

2012-04-13 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* interopProvider.c:
	[ 3517573 ] Problem with SequenceContext migration

2012-04-13 Narasimha Sharoff <nsharoff@us.ibm.com>

	* httpAdapter.c, httpComm.c:
	[ 3516184 ] commClose close socket when file hndl is null

2012-04-10 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* ABTScript:
	[ 3516167 ] Force kill sfcbd on stop if needed

2012-04-09  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimXmlGen.c:
	[ 3419721 ] reset CMPIValue buffer in str2CMPIValue

	* httpAdapter.c, sfcBasicPAMAuthentication.c:
	[ 3512094 ] SFCB can leak PAM handles under error conditions

2012-04-09 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* sfcb.init-none.in
	[ 3516167 ] Force kill sfcbd on stop if needed

2012-04-05  Narasimha Sharoff  <nsharoff@us.ibm.com>

	* control.c:
	[ 3514627 ] unsupported sfcb.cfg param - use exit call

2012-04-04  Narasimha Sharoff  <nsharoff@us.ibm.com>

	* providerDrv.c, providerMgr.c, sfcBroker.c:
	[ 3497096 ] double free during stopProc()

2012-04-04  Narasimha Sharoff  <nsharoff@us.ibm.com>

	* providerDrv.c, providerMgr.c, providerMgr.h, support.c:
	[ 3416060 ] SIGSEGV in tool_mm_flush()

2012-04-03  Narasimha Sharoff  <nsharoff@us.ibm.com>

	* providerDrv.c:
	[ 3498496 ] sfcb hangs and fails to respond to CIM requests

	* brokerUpc.c:
	[ 3497209 ] oom panic: out of memory using fsp indprovider

	* brokerUpc.c:
	[ 3483200 ] duplicate indication deliveries

2012-04-03  Narasimha Sharoff  <nsharoff@us.ibm.com>
