@@ -94,6 +94,7 @@ Changes in 1.3.15
 New Features: 
 - 3501314 Add dynamic logging and syslog output to sfcb trace
 - 3517530 Implement mark, release routines in CMPIBrokerMemFT
+- 3513390 Enforce LD and subscription limits
 
 Bugs Fixed:
 - 3514627 unsupported sfcb.cfg param - use exit call
